examples/ill-typed/case2.hm
\x -> case x of
        (f:[])    -> f 3
        []        -> x
